# evalio

./: .clang-format  .envrc  .gitignore  .gitmodules  CHANGELOG.md  CITATION.bib  CITATION.cff  CMakeLists.txt  DLIO_INTEGRATION.md  README.md  cleaner.yaml  clone_pipelines.sh  compute_size.py  default.nix  derivation.nix  hello.py  justfile  manifest  mkdocs.yml  pyproject.toml  result  rosbags.nix  setup_pipelines.sh  vcpkg.json  version.nix  versions.json
.devcontainer/: devcontainer.json
.github/: release-please-config.json
.github/workflows/: ci.yml  on_main.yml  on_pr.yml  release.yml  reusable_build.yml  reusable_checks.yml  reusable_docs.yml
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/examples/data_loading/: index.html
0.2.0/examples/dataset/: index.html
0.2.0/examples/evaluation/: index.html
0.2.0/examples/odometry/: index.html
0.2.0/examples/pipeline/: index.html
0.2.0/included/datasets/: index.html
0.2.0/included/pipelines/: index.html
0.2.0/install/: index.html
0.2.0/quickstart/: index.html
0.2.0/ref/cli/: index.html
0.2.0/ref/datasets/: index.html
0.2.0/ref/pipelines/: index.html
0.2.0/ref/rerun/: index.html
0.2.0/ref/stats/: index.html
0.2.0/ref/types/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/examples/data_loading/: index.html
0.3.0/examples/dataset/: index.html
0.3.0/examples/evaluation/: index.html
0.3.0/examples/odometry/: index.html
0.3.0/examples/pipeline/: index.html
0.3.0/included/datasets/: index.html
0.3.0/included/pipelines/: index.html
0.3.0/install/: index.html
0.3.0/quickstart/: index.html
0.3.0/ref/cli/: index.html
0.3.0/ref/datasets/: index.html
0.3.0/ref/pipelines/: index.html
0.3.0/ref/rerun/: index.html
0.3.0/ref/stats/: index.html
0.3.0/ref/types/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/examples/data_loading/: index.html
0.4.0/examples/dataset/: index.html
0.4.0/examples/evaluation/: index.html
0.4.0/examples/odometry/: index.html
0.4.0/examples/pipeline/: index.html
0.4.0/included/datasets/: index.html
0.4.0/included/pipelines/: index.html
0.4.0/install/: index.html
0.4.0/quickstart/: index.html
0.4.0/ref/cli/: index.html
0.4.0/ref/datasets/: index.html
0.4.0/ref/pipelines/: index.html
0.4.0/ref/rerun/: index.html
0.4.0/ref/stats/: index.html
0.4.0/ref/types/: index.html
0.4.0/search/: search_index.json
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/examples/data_loading/: index.html
0.4.1/examples/dataset/: index.html
0.4.1/examples/evaluation/: index.html
0.4.1/examples/odometry/: index.html
0.4.1/examples/pipeline/: index.html
0.4.1/included/datasets/: index.html
0.4.1/included/pipelines/: index.html
0.4.1/install/: index.html
0.4.1/quickstart/: index.html
0.4.1/ref/cli/: index.html
0.4.1/ref/datasets/: index.html
0.4.1/ref/pipelines/: index.html
0.4.1/ref/rerun/: index.html
0.4.1/ref/stats/: index.html
0.4.1/ref/types/: index.html
0.4.1/search/: search_index.json
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/examples/data_loading/: index.html
0.4.2/install/: index.html
0.4.2/quickstart/: index.html
0.4.2/ref/cli/: index.html
0.4.2/search/: search_index.json
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/install/: index.html
0.5.0/quickstart/: index.html
0.5.0/ref/: cli.py
0.5.0/search/: search_index.json
cpp/: CMakeLists.txt  DEV.md  bindings.cpp  setup_pipelines.bat  setup_pipelines.sh  test.cpp  types.h  utils.h
cpp/bindings/: CMakeLists.txt  main.cpp  pipeline.h  ros_pc2.h  types.h
cpp/bindings/pipelines/: bindings.h  ct_icp.h  ct_icp.patch  dlio.h  dlio.patch  fast_lio2.cmake  fast_lio2.h  fast_lio2.patch  form.h  form.patch  genz_icp.h  genz_icp.patch  kiss_icp.h  kiss_icp.patch  lio_sam.h  loam.h  loam.patch  mad_icp.h  mad_icp.patch
cpp/evalio/: CMakeLists.txt  bindings.h  conversions.h  macros.h  metrics.h  pipeline.h  types.h  types_bindings.h
cpp/evalio/convert/: base.h  eigen.h  gtsam.h  sophus.h
cpp/evalio/pipelines/: base.h  bindings.h  kiss_icp.h  kiss_icp.nix  kiss_icp.patch  lio_sam.h  lio_sam.nix  tclio.h
cpp/pipelines/: base.h  kiss_icp.h
datasets/: base.py
docker/: Dockerfile_manylinux  clone_repos.sh  install_deps_manylinux.sh  install_gtsam.sh  install_robin.sh  install_sophus.sh  install_tbb.sh  publish_dockers.sh  sophus.patch
docs/: included.py  index.md  install.md  quickstart.md
docs/builtins/: datasets.md
docs/css/: tweaks.css
docs/examples/: data_loading.md  dataset.md  evaluation.md  odometry.md  pipeline.md
docs/ref/: cli.md  cli.py  datasets.md  pipelines.md  rerun.md  stats.md  types.md
evalio/: CMakeLists.txt
latest/: 404.html  included.py  index.html  objects.inv  sitemap.xml
latest/install/: index.html
latest/quickstart/: index.html
latest/search/: search_index.json
nix/gtsam/: derivation.nix
nix/rosbags/: derivation.nix
pipelines/: CMakeLists.txt  base.h  kiss_icp.cpp
python/evalio/: __init__.py  eval.py  pipelines.py  rerun.py  stats.py  types.py  utils.py  vis.py
scripts/: heatmap.py  metrics.py
stable/: 404.html  index.html  sitemap.xml
stable/install/: index.html
stable/quickstart/: index.html
stable/search/: search_index.json
tests/: get_files.py  get_lens.py  make_test_data.py  test_cli.py  test_cli_data.py  test_cli_ls.py  test_cli_stats.py  test_csv_loading.py  test_dataset_impl.py  test_dataset_loading.py  test_experiment.py  test_io.py  test_iteration.py  test_loading.py  test_parsing.py  test_rosbag_conversion.py  test_rosbag_iter.py  test_se3.py  test_so3.py  test_stamp.py  test_stats.py  test_time.py  test_traj_stats.py  test_trajectory.py  utils.py
tests/data/: imu_boreas.pkl  imu_boreas_rt.pkl  imu_botanic_garden.pkl  imu_cumulti.pkl  imu_enwide.pkl  imu_fomo.pkl  imu_helipr.pkl  imu_hilti_2022.pkl  imu_multi_campus.pkl  imu_multi_campus_2024.pkl  imu_newer_college_2020.pkl  imu_newer_college_2021.pkl  imu_oxford_spires.pkl  lidar_botanic_garden.pkl  lidar_hilti_2022.pkl
(+98 files in other folders)
