[project]
name = "evalio"
authors = [{ name = "Easton Potokar", email = "contagon6@gmail.com" }]
maintainers = [{ name = "Easton Potokar", email = "contagon6@gmail.com" }]
version = "0.1.1"
description = "Evaluate Lidar-Inertial Odometry on public datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argcomplete>=3.3.0",
    "gdown>=5.2.0",
    "numpy",
    "pyyaml>=6.0",
    "rapidfuzz>=3.12.2",
    "rosbags>=0.10",
    "tqdm>=4.66",
    "typer>=0.15.2",
]
keywords = [
    "lidar",
    "odometry",
    "evaluation",
    "inertial",
    "dataset",
    "robotics",
]
license = { file = "LICENSE.txt" }

[project.optional-dependencies]
vis = ["rerun-sdk>=0.18.2"]

[build-system]
requires = ["scikit-build-core>=0.8", "pybind11", "pybind11-stubgen", "numpy"]
build-backend = "scikit_build_core.build"

[project.scripts]
evalio = "evalio.cli:app"

# -------------- Tools -------------- #
# building
[tool.scikit-build]
minimum-version = "0.8"
build-dir = "build/{wheel_tag}"
sdist.include = ["cpp/bindings/pipelines-src/*"]

[tool.scikit-build.cmake.define]
EVALIO_BUILD_PYTHON = true
CMAKE_BUILD_TYPE = "Release"
VCPKG_INSTALLED_DIR = "./.vcpkg_installed"

[tool.cibuildwheel]
build = ["cp*-manylinux_x86_64", "cp*-macosx_x86_64", "cp*-macosx_arm64"]
skip = ["cp310-*"]
manylinux-x86_64-image = "manylinux_2_28"
test-requires = "pytest>=8.3.5 scipy>=1.15.2"
test-command = "evalio ls pipelines && pytest {project}/tests"
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "yum -y install curl zip unzip tar"

# tbb requires at least 10.13, pcl 10.15. We bump to 11 for simplicity.
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11"

# local development
[tool.uv]
dev-dependencies = [
    "cmake>=3.30.3",
    "compdb>=0.2.0",
    "pybind11-stubgen>=2.5.1",
    "ruff>=0.6.8",
    "types-pyyaml>=6.0.12.20240917",
    "types-tabulate>=0.9.0.20240106",
    "types-tqdm>=4.66.0.20240417",
    "pytest>=8.3.5",
    "scipy>=1.15.2",
    "scipy-stubs>=1.15.2.1",
    "bump-my-version>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
    "mkdocs-material>=9.6.11",
]

[tool.ruff]
exclude = ["cpp/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bumpversion]
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
regex = true
files = [
    { filename = "CMakeLists.txt" },
    { filename = "pyproject.toml" },
    { filename = "python/evalio/__init__.py" },
]
