[project]
name = "evalio"
authors = [{ name = "Easton Potokar", email = "contagon6@gmail.com" }]
maintainers = [{ name = "Easton Potokar", email = "contagon6@gmail.com" }]
version = "0.4.2"
description = "Evaluate Lidar-Inertial Odometry on public datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asteval>=1.0.6",
    "distinctipy>=1.3.4",
    "gdown>=5.2.0",
    "joblib>=1.5.2",
    "numpy",
    "polars>=1.33.1",
    "pyyaml>=6.0",
    "rapidfuzz>=3.12.2",
    "rosbags>=0.11.0",
    "tqdm>=4.66",
    "typer>=0.15.3",
]
keywords = [
    "lidar",
    "odometry",
    "evaluation",
    "inertial",
    "dataset",
    "robotics",
]
license = { file = "LICENSE.txt" }

[project.optional-dependencies]
vis = ["rerun-sdk>=0.25"]

[build-system]
requires = ["scikit-build-core>=0.8", "nanobind>=2.9.2", "numpy"]
build-backend = "scikit_build_core.build"

[project.scripts]
evalio = "evalio.cli:app"

# -------------- Tools -------------- #
# building
[tool.scikit-build]
minimum-version = "0.8"
build-dir = "build/{wheel_tag}"
sdist.include = ["cpp/bindings/pipelines-src/*"]

[tool.scikit-build.cmake.define]
EVALIO_BUILD_PYTHON = true
VCPKG_INSTALLED_DIR = "./.vcpkg_installed"
# VCPKG_INSTALL_OPTIONS = "--debug"

[tool.cibuildwheel]
build = ["cp*-manylinux_x86_64", "cp*-macosx_arm64"]
skip = ["cp310-*", "cp3??t-*"]
test-requires = "pytest>=8.3.5 scipy>=1.15.2"
test-command = "evalio ls pipelines && pytest {project}/tests"
build-verbosity = 1

# tbb requires at least 10.13, pcl 10.15. We bump to 11 for simplicity.
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11"

# local development
[dependency-groups]
dev = [
    "cmake<4.0.0",
    "compdb>=0.2.0",
    "ruff>=0.6.8",
    "types-pyyaml>=6.0.12.20240917",
    "types-tabulate>=0.9.0.20240106",
    "types-tqdm>=4.66.0.20240417",
    "pytest>=8.3.5",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.29.1",
    "mkdocs-material>=9.6.11",
    "mkdocs-gen-files>=0.5.0",
    "nanobind>=2.9.2",
    "mike>=2.1.3",
    "basedpyright>=1.31.4",
    "joblib-stubs>=1.5.2.0.20250831",
    "scipy>=1.16.2",
    "scipy-stubs>=1.16.2.4",
]

[tool.ruff]
exclude = ["cpp/**/*"]
lint.ignore = ["E731"]

[tool.ruff.format]
# https://docs.astral.sh/ruff/configuration/
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
include = ["python", "tests"]
# Eventually would like to fix all the errors to switch to "strict"
typeCheckingMode = "strict"
stubPath = "python/typings"
reportPrivateUsage = "none"
reportConstantRedefinition = "none"
reportUnnecessaryIsInstance = "none"
